--- a/short-response/q3.md
+++ b/short-response/q3.md
@@ -3,9 +3,7 @@
 When is it appropriate to use the `"*"` path for a `Route` in React Router?
 
 # Answer
-
-
-
+helps you redirect if the routes you have don't match the URL your query has.
 
 # Feedback
 
