--- a/short-response/q2.md
+++ b/short-response/q2.md
@@ -3,9 +3,23 @@
 What are the benefits of single-page apps (SPAs) versus multi-page apps (MPAs)?
 
 # Answer
+First, what is an SPA? What is an MPA?
+---
+* SPA - single page application, which depenidng on user imput, fetches data and loads different components onto the same page. This makes it so you do not have to render multiple pages.
 
+SPAs are better because:
+* they load faster since they're lighter
+* Server load is also lighter bc again, not hosting multiple pages just components. Data can be outsourced to third parties
+* Pages don't have to reload 
 
+---
 
+* MPA - Multiple page application, which switch between pages depending on user input. 
+
+MPAs have pros, too: 
+* Better for SEO
+* Better for larger apps 
+* tend to be friendlier with most browsers (compatibility)
 
 # Feedback
 
