--- a/short-response/q4.md
+++ b/short-response/q4.md
@@ -21,7 +21,7 @@ const PhoneDetails = () => {
 What is the data type of `phoneId`?
 
 # Answer
-
+The data type of `phoneId` is still string, since it was just extracted from a path/URL.
 
 # Feedback
 
