--- a/short-response/q5.md
+++ b/short-response/q5.md
@@ -10,7 +10,7 @@ With React Router, which of the following path(s) will match the `/products/:id`
 Explain your answer.
 
 # Answer
-
+`/products/5` will match the `/products/:id` path since after the products path, an id number is provided. Whereas the rest include less, more, or completely different (but related) information that change the path to a different source of data. 
 
 
 
